<resources>
    <string name="app_name">CovidWorldTracker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today_cases">Today Cases</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="afct_countries">Affected Countries</string>
    <string name="total_cases">Total cases</string>
    <string name="total_deaths">Total Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="deaths">Deaths</string>
    <string name="actives">Active</string>
    <string name="global_stats">GLOBAL STATS</string>
    <string name="cases">Cases</string>
    <string name="critical">Critical</string>
    <string name="text_zero">0</string>

    <string name="track_button_text">Track countries</string>

    <string name="image_transition_name">ImageTransition</string>
</resources>