<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/eight">

    <ImageView
        android:id="@+id/flagView"
        android:layout_width="245dp"
        android:layout_height="170dp"
        android:layout_marginTop="@dimen/sixteen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/cases"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagView" />

    <TextView
        android:id="@+id/tvCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagView" />

    <View
        android:id="@+id/bar_one"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/today_cases"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_one" />

    <TextView
        android:id="@+id/tvTodayCases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_one" />

    <View
        android:id="@+id/bar_two"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/deaths"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_two" />

    <TextView
        android:id="@+id/tvTotalDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_two" />

    <View
        android:id="@+id/bar_tree"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/today_deaths"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_tree" />

    <TextView
        android:id="@+id/tvTodayDeaths"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_tree" />

    <View
        android:id="@+id/bar_four"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/recovered"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_four" />

    <TextView
        android:id="@+id/tvRecovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_four" />

    <View
        android:id="@+id/bar_five"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/actives"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_five" />

    <TextView
        android:id="@+id/tvActives"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_five" />

    <View
        android:id="@+id/bar_six"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/critical"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_six" />

    <TextView
        android:id="@+id/tvCritical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten"
        android:fontFamily="sans-serif-light"
        android:text="@string/text_zero"
        android:textColor="@color/color_one"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_six" />

    <View
        android:id="@+id/bar_seven"
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:layout_marginTop="@dimen/ten"
        android:background="@color/color_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />

</androidx.constraintlayout.widget.ConstraintLayout>